Stage 4: Working integration tests